# Kind

./: Cargo.toml  README.md  main.fm  stdlib.fm
EA-Core/: README.md
EA-TT/: spec.md
FM-Core/: README.md
agda/: Formality.agda
base/: Kind.kind  Lsp.kind
base/Kind/: Error.kind
base/Kind/Error/: origin.kind
base/Kind/Term/: check.kind
base/Lsp/: Diagnostic.kind  DiagnosticSeverity.kind  Report.kind  definition.kind  defs.kind  diagnostics.kind  on_change.kind  on_completions.kind  on_hover.kind  refs.kind
base/Map/: delete.kind
cuda/: main.cu
haskell/: Formality.cabal  LICENSE  README.md  stack.yaml
haskell/fmc/: Main.hs
haskell/src/: Core.hs
haskell/src/Core/: Check.hs  Eval.hs  Hash.hs  Parse.hs  Print.hs  Rig.hs  Type.hs
javascript/: FormalityCore.js  FormalitySynt.js  FormalityToJS.js  compiler.js  extra.js  formality.js  main.js  nasic_32bit.js  package.json
src/: Fm.fm  LanguageServer.fm  fm-core.js  fm-lang.js  main.rs  term.rs
src/Example/: fib.fm
src/LanguageServer/: Diagnostic.fm  Report.fm  check.fm  make_report.fm
src/LanguageServer/make_report/: go.fm
src/Lsp/: definition.fm  defs.fm  on_change.fm  refs.fm
stdlib/: array.fmc  exp_mod.fmc  kaelin.fmc  pbt.fmc  peri.fmc  tree.fmc
