name:                Formality
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/moonad/Formality
license:             MIT
license-file:        LICENSE
author:              John C. Burnham, Victor Maia, Gabriel Barreto
maintainer:          john@sunshinecybernetics.com
copyright:           2020 Sunshine Cybernetics
category:            Web
build-type:          Simple
cabal-version:        >=1.10
extra-source-files:  README.md

--executable fm-test
--  hs-source-dirs:      fm
--  main-is:             Main.hs
--  default-language:    Haskell2010
--  build-depends:       base >= 4.7 && < 5

executable fmc-test
  hs-source-dirs:      fmc
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , Formality

library
  hs-source-dirs: src
  default-language:    Haskell2010
  exposed-modules:     Core.Rig
                     , Core.Type
                     , Core.Eval
                     , Core.Print
                     , Core.Parse
                     , Core.Hash
                     , Core.Check
                     , Core
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , text
                     , megaparsec
                     , mtl
                     , blake3
                     , memory
                     , bytestring
                     , base16-bytestring
                     , unsafeperformst

  default-extensions:  OverloadedStrings
                     , MultiWayIf
